Updates react copystyles.js to pull in css files given fractal refactor. Fixes error red contrast issue (global fix)

--- a/agnostic-css/public/css-dist/common.concat.css
+++ b/agnostic-css/public/css-dist/common.concat.css
@@ -84,8 +84,7 @@ ul {
   --agnostic-warning-border-accent: #ecd386;
   --agnostic-warning-border: #f0e3b9;
   --agnostic-warning-dark: #946c00;
-  /* --agnostic-error: #d4361e; */
-  --agnostic-error: #e23939;
+  --agnostic-error: #e02e2e;
   --agnostic-error-dark: #771414;
   --agnostic-error-light: #ffe0e0;
   --agnostic-error-border: #eec8c8;
